# image-collect

./: .gitignore  .pypirc  README.md  ic.py  image_collect.py  pyproject.toml  requirements.txt  setup.py
